compiler/kernc_cli/tests/soundness/run-pass/const_generics/const_specific_impl_specialization_is_coherent.kn
// class: const-generic-specialization
// source: a concrete const impl should be allowed when it uniquely specializes a generic const impl
// exit: 0

trait Score {
    fn value() i32;
};

struct Buf[N: usize] {};

impl[N: usize] Buf[N]: Score {
    fn value() i32 {
        return 1;
    }
}

impl Buf[4]: Score {
    fn value() i32 {
        return 2;
    }
}

fn main() i32 {
    return Buf[4].{}.value() - 2;
}
